--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.password=b75nxrjrxtkvcfahgceg
 #JWT
 jwt.secret = secret
 jwt.expiration = 3600
-server.port=8080
+# server.port=8080
 
 server.address=localhost
 
