--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.datasource.password=b75nxrjrxtkvcfahgceg
 #JWT
 jwt.secret = secret
 jwt.expiration = 3600
-# server.port=8080
+server.port=8000
 
-server.address=localhost
+# server.address=localhost
 
 
 #MYSQL_ADDON_HOST=b75nxrjrxtkvcfahgceg-mysql.services.clever-cloud.com
