--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,9 @@ spring.datasource.password=b75nxrjrxtkvcfahgceg
 #JWT
 jwt.secret = secret
 jwt.expiration = 3600
-server.port=8000
 
+
+# server.port=8000
 # server.address=localhost
 
 
