--- a/system.properties
+++ b/system.properties
@@ -2,4 +2,4 @@
 # Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 java.runtime.version=8
-server.port=8000
+server.port=${PORT}
